Collada Export breaks my character #27022

Closed
opened 2011-04-18 20:17:06 +02:00 by Reiner Prokein · 15 comments

%%%r36147, 64 Bit, Win 7 64 Bit Home Premium

I tried to export my character via collada. That the whole rotation is by 90 degrees rotated wouldn`t be a this big problem. But its legs are broken, and the objects that are parented to bones are not longer in its position.

Attached two screenshots, and the troublefile.
%%%

%%%r36147, 64 Bit, Win 7 64 Bit Home Premium I tried to export my character via collada. That the whole rotation is by 90 degrees rotated wouldn`t be a this big problem. But its legs are broken, and the objects that are parented to bones are not longer in its position. Attached two screenshots, and the troublefile. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Armature animation is known not to be well supported by our collada integration (but fixes are planned).

What program are you loading this in?, If it supports FBX you could try that since it has well tested character animation support.%%%

%%%Armature animation is known not to be well supported by our collada integration (but fixes are planned). What program are you loading this in?, If it supports FBX you could try that since it has well tested character animation support.%%%
Author

%%%Thanks Campbell.

I load it into Ultimate Unwrap 3D. Of course it also loads FBX besides a ton of other formats. But unfortunately Blender doesn`t export the character as FBX neither.

I am trapped at the moment. No working pipeline :(%%%

%%%Thanks Campbell. I load it into Ultimate Unwrap 3D. Of course it also loads FBX besides a ton of other formats. But unfortunately Blender doesn`t export the character as FBX neither. I am trapped at the moment. No working pipeline :(%%%
Member

%%%Multiple objects parented to one armature isn't supported yet, moving to todo (probably addressed during the summer).%%%

%%%Multiple objects parented to one armature isn't supported yet, moving to todo (probably addressed during the summer).%%%
%%%This issue and two others are all duplicates I believe: http://projects.blender.org/tracker?func=detail&aid=24265 http://projects.blender.org/tracker?func=detail&aid=27022 http://projects.blender.org/tracker?func=detail&aid=27598%%%
Member

%%%I believe this report can be closed as resolved.
@Reiner Prokein: Please can you verify that the bug has been resolved in the trunk version of Blender.%%%

%%%I believe this report can be closed as resolved. @Reiner Prokein: Please can you verify that the bug has been resolved in the trunk version of Blender.%%%

%%%Marking report as fixed by request from Gaia. If it's still not resolved, can return status back.%%%

%%%Marking report as fixed by request from Gaia. If it's still not resolved, can return status back.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Thanks for reminder. Confirming that the problems are partially fixed. The feet are not longer broken, which is a big progress. Many thanks for that :)

The other subobjects are still offset though. My character has more than one mesh attached to the bones system. I´ve attached a new shot. As you can see in the shot, the hat is not longer at the head, but fairly above it. The shot is taken from Ultimate Unwrap 3D , and the mesh is exported as collada from r43983.%%%

%%%Thanks for reminder. Confirming that the problems are partially fixed. The feet are not longer broken, which is a big progress. Many thanks for that :) The other subobjects are still offset though. My character has more than one mesh attached to the bones system. I´ve attached a new shot. As you can see in the shot, the hat is not longer at the head, but fairly above it. The shot is taken from Ultimate Unwrap 3D , and the mesh is exported as collada from r43983.%%%

%%%Hi,

A blender with revision 44231 forward should fix the bone parenting issue. You can poke here on in irc if problems persist.%%%

%%%Hi, A blender with revision 44231 forward should fix the bone parenting issue. You can poke here on in irc if problems persist.%%%
Author

%%%Revision 44297, Blender 2.62.0

I would love to confirm the fix. But it is not fixed, it is unfortunately worse than before. Now my meshes doesn`t even export anymore. Just the skeletton arrives. With revision 44089 the whole character arrives in Ultimate Unwrap, but with offset hat and eye meshes. So it seems that the fix has broken something here. Sorry for this bad news.%%%

%%%Revision 44297, Blender 2.62.0 I would love to confirm the fix. But it is not fixed, it is unfortunately worse than before. Now my meshes doesn`t even export anymore. Just the skeletton arrives. With revision 44089 the whole character arrives in Ultimate Unwrap, but with offset hat and eye meshes. So it seems that the fix has broken something here. Sorry for this bad news.%%%

%%%Hmm.. probably the bmesh merge, will look into it.%%%

%%%Hmm.. probably the bmesh merge, will look into it.%%%
Author

%%%Thanks Juha, and ood luck with finding the baddie :)%%%

%%%Thanks Juha, and ood luck with finding the baddie :)%%%

%%%I'll just note here I've made some changes to both bone parenting and mesh exporting... maybe r44419 is the lucky revision :)%%%

%%%I'll just note here I've made some changes to both bone parenting and mesh exporting... maybe r44419 is the lucky revision :)%%%
Author

%%%Yay! It is! Confirming this bug as fixed. Many thanks :)%%%

%%%Yay! It is! Confirming this bug as fixed. Many thanks :)%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#27022
No description provided.